--- a/module3 solution/css/index.css
+++ b/module3 solution/css/index.css
@@ -1,5 +1,5 @@
 body{
-	background-color:#eaffb0;
+	background-color:#001bb9;
 }
 
 .content{
@@ -7,7 +7,7 @@ body{
 	border:2px solid #9bec3c;
 	padding:10px;
 	height:1000vh;
-	font-size:20px;
+	font-size:30px;
 }
 
 .container-fluid{
@@ -15,6 +15,9 @@ body{
 	margin-left:20px;
 }
 
+.container-fluid h1{
+	color:white;
+}
 
 .navbar-brand a h1{
 	color:#000;
@@ -32,6 +35,7 @@ body{
 	background-color:#dcff9f;
 	border:2px solid #9bec3c;
 	border-radius:0;
+	height:60px;
 }
 
 .navbar-header button.navbar-toggle, .navbar-header .icon-bar{
@@ -39,7 +43,7 @@ body{
 }
 
 .navbar-header button.navbar-toggle{
-	clear:both;
+	
 }
 
 #collapsable-nav {
